syntax = "proto3";
option csharp_namespace = "GrpcPopulation";
package population;
service PopulationProvider{
	rpc GetPopulation (PopulationRequest) returns (populationResponse);
}
message PopulationRequest{
	string State = 1;
}

message populationResponse{
	string Count = 1;
}